--- a/src/assets/styles/bootstrap.scss
+++ b/src/assets/styles/bootstrap.scss
@@ -1,24 +1,24 @@
-@import "~bootstrap/scss/modal";
-@import "~bootstrap/scss/reboot";
-@import "~bootstrap/scss/type";
-@import "~bootstrap/scss/alert";
-@import "~bootstrap/scss/card";
-@import "~bootstrap/scss/code";
-@import "~bootstrap/scss/grid";
-@import "~bootstrap/scss/buttons";
-@import "~bootstrap/scss/button-group";
-@import "~bootstrap/scss/list-group";
-@import "~bootstrap/scss/dropdown";
-@import "~bootstrap/scss/badge";
-@import "~bootstrap/scss/popover";
-@import "~bootstrap/scss/close";
-@import "~bootstrap/scss/forms";
-@import "~bootstrap/scss/custom-forms";
-@import "~bootstrap/scss/input-group";
-@import "~bootstrap/scss/nav";
-@import "~bootstrap/scss/navbar";
-@import "~bootstrap/scss/spinners";
-@import "~bootstrap/scss/carousel";
-@import "~bootstrap/scss/tooltip";
-@import "~bootstrap/scss/transitions";
-@import "~bootstrap/scss/utilities";
+@import "./node_modules/bootstrap/scss/modal";
+@import "./node_modules/bootstrap/scss/reboot";
+@import "./node_modules/bootstrap/scss/type";
+@import "./node_modules/bootstrap/scss/alert";
+@import "./node_modules/bootstrap/scss/card";
+@import "./node_modules/bootstrap/scss/code";
+@import "./node_modules/bootstrap/scss/grid";
+@import "./node_modules/bootstrap/scss/buttons";
+@import "./node_modules/bootstrap/scss/button-group";
+@import "./node_modules/bootstrap/scss/list-group";
+@import "./node_modules/bootstrap/scss/dropdown";
+@import "./node_modules/bootstrap/scss/badge";
+@import "./node_modules/bootstrap/scss/popover";
+@import "./node_modules/bootstrap/scss/close";
+@import "./node_modules/bootstrap/scss/forms";
+@import "./node_modules/bootstrap/scss/custom-forms";
+@import "./node_modules/bootstrap/scss/input-group";
+@import "./node_modules/bootstrap/scss/nav";
+@import "./node_modules/bootstrap/scss/navbar";
+@import "./node_modules/bootstrap/scss/spinners";
+@import "./node_modules/bootstrap/scss/carousel";
+@import "./node_modules/bootstrap/scss/tooltip";
+@import "./node_modules/bootstrap/scss/transitions";
+@import "./node_modules/bootstrap/scss/utilities";
